first commit of student opps prototype website
forked the student careers protoype project to create a demo of student opportunities website.

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -6,72 +6,71 @@
 <div class="row scs-homepage-mega-links blue-bkgd-box ">
 
  <div class="col-sm-12">
-       <h2>Popular topics <span class="lighten">AtoZ </span></h2>
+       <h2>Popular opportunities<span class="lighten"> A-Z</span></h2>
  </div>
   <div class="col-sm-4">
-    <h3><a href="/advice/topic_advice-and-appointments.html">Advice and appointments</a></h3>
-<p>Includes career guidance appointments, drop in sessions, workshops</p>
+    <h3><a href="#">Award schemes</a></h3>
+<p>Help understanding how the university experiences add value to your employability.
+</p>
 
-<h3><a href="/job-searching/fair-sector-events.html">Careers fairs and sector events</a></h3>
-<p>Includes where to start, assess your values, skills and strengths</p>
+<h3><a href="#">Bursary schemes</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3><a href="">Cover letters</a></h3>
-<p>Includes application forms, writing tips, examples</p>
+<h3><a href="#">Careers guidance appointments</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3><a href="/applications/how-to-write-a-cv/cv.html">CVs</a></h3>
-<p>CVs guide, writing tips, what to include</p>
 
-<h3><a href="">Employing warwick graduates</a></h3>
-<p>Recruiting at Warwick, connecting with graduate talent</p>
+<h3><a href="#">Digital skills courses</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3><a href="">Further study</a></h3>
-<p>Includes research students skills programme, postgraduate taught students</p>
+<h3><a href="#">Development programmes</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
   </div>
 
   <div class="col-sm-4">
 
-    <h3><a href="">Graduates</a></h3>
-<p>Graduate destinations, support, recruitment cycle, case studies</p>
 
-<h3><a href="">International careers</a></h3>
-<p>Includes overseas graduate jobs and internships</p>
+<h3><a href="#">Enterprise Funding</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3><a href="/interviews/topic_interviews.html">Interviews</a></h3>
+<h3><a href="#">International opportunities</a></h3>
 <p>Includes interview support, video interviews, telephone interviews</p>
 
-<h3><a href="/experience/work-experience-bursary-scheme/work-experience-bursary-scheme.html">Internships</a></h3>
-<p>Including placements and work experience</p>
+<h3><a href="#">Internships</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3><a href="/applications/topic_job-applications.html">Job applications</a></h3>
-Includes assessement centres, psychometric and aptitude tests, what to expect
+  <h3><a href="">Job Vacancies</a></h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<h3>
-<a href="/job-searching/topic_job-searching.html">Job searching</a></h3>
+  <h3><a href="">Language courses</a></h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-<p>Including placements and work experience, summer internships and careers fairs</p>
-  </div>
-
-  <div class="col-sm-4">
-    <h3><a href="">Networking</a></h3>
-  <p>Includes sector events, careers fairs, workshops and support</p>
+</div>
 
 
-  <h3><a href="/options/topic_future-options.html">Personality types and motivation</a></h3>
-  <p>Career motivations, goals, skills and strengthes</p>
-
-  <h3><a href="">Researching employers</a></h3>
-  <p>Includes job sectors, what employers want, SMEs</p>
+  <div class="col-sm-4 ">
 
 
-  <h3><a href="">Skills development</a></h3>
+  <h3><a href="">Study abroad</a></h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+
+    <h3><a href="">Student Societies</a></h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+
+  <h3><a href="">Skills development workshops</a></h3>
   <p>Includes awards, personal development, study & research skills, academic writing
   </p>
 
-  <h3><a href="">Vacancies</a></h3>
-  <p>Internships and graduate positions available from myAdvantage</p>
+  <h3><a href="/options/topic_future-options.html">Volunteering</a></h3>
+  <p>Career motivations, goals, skills and strengthes</p>
 
-  <h3><a href="/experience/work-experience-bursary-scheme/work-experience-bursary-scheme.html">Work experience bursary scheme</a></h3>
-  <p>Opportunites and skills development</p>
+  <h3><a href="/options/topic_future-options.html">Work experience</a></h3>
+  <p>Career motivations, goals, skills and strengthes</p>
+
+  <p><a href="#">Show All</a></p>
 
 </div>
 
@@ -82,23 +81,17 @@ Includes assessement centres, psychometric and aptitude tests, what to expect
 
 
   <div class="col-md-4"> <!-- Fluid width widget -->
-<section id="careersHubFeed" class="box boxstyle_ box1"><h2>Latest Jobs</h2>
+<section class="box boxstyle_ box1">
 
-        <ul class="media-list">
-          <li class="media" v-for="item in items">
-            <div class="media-body">
-              <h4 class="media-heading"> <a href="#"> {{ item.title }}</a> </h4>
+  <h2>Hear from Alumni about what opportunities helped them</h2>
 
-              <p> {{ item.summary }} </p>
+  <p><a href="#">Peter Shelley - Engineer </a> </p>
 
-              <p class="event-dates event-dates"> <span class="event-start-time"> <span class="glyphicon glyphicon-map-marker"></span> <em>{{ item.city }}</em> <span class="glyphicon glyphicon-time"></span> <em>{{ item.contractHours }}</em> </span> </p>
+  <p><a href="#">Albi Smith - Project Manager CAFOD</a></p>
 
-              <p> {{ item.employerName }} </p>
+  <p><a href="#">Teng Hao  - CoFound </a></p>
 
-            </div>
 
-          </li>
-        </ul>
         </section>
   </div>
 
@@ -106,32 +99,28 @@ Includes assessement centres, psychometric and aptitude tests, what to expect
 
 
   <div class="col-md-4">
-    <section class="box boxstyle_ box2"><h2>Careers Blog</h2>
+    <section class="box boxstyle_ box2"><h2>Hear from current students</h2>
 
-<p>Projects currently underway in the School include:</p>
 
-<p><a href="//warwick.ac.uk/fac/arts/modernlanguages/research/french/currentprojects/napoleonictheatre/">French Theatre of the Napoleonic Era</a></p>
+<p><a href="#">Esme Smith - PAIS</a> </p>
 
-<p><a href="http://www2.warwick.ac.uk/fac/arts/modernlanguages/research/french/crusades/">Lyric Responses to the Crusades in Medieval France and Occitan</a></p>
+<p><a href="#">Johnny English - WMG graduate</a></p>
 
-<p><a href="http://www2.warwick.ac.uk/fac/arts/modernlanguages/research/imperialentanglements/">Imperial Entanglements</a></p>
+<p><a href="#">Victoria Santiago  - Humanities</a></p>
 
-<p><a href="http://go.warwick.ac.uk/hispanicliverpool">Hispanic Liverpool</a></p>
+<p><a href="#">Frederic Poole - Modern Langauage</a></p>
 
-<p><a href="//warwick.ac.uk/fac/arts/modernlanguages/research/italian/projects/romanmodernities/">Roman Modernities</a></p>
 
-<p><a href="//warwick.ac.uk/fac/arts/modernlanguages/research/chileanexile/">Chilean Exiles in the UK</a></p>
+
 
 </section>
   </div>
 
   <div class="col-md-4">
     <section class="box boxstyle_ box5">
-      <h2>Contact us</h2>
+      <h2>Start thinking about how your entire university experience adds value to your employability.</h2>
 
-    <p>Talk to our staff at our drop in centre in the <a href="#">Oculus building.</a></p><p> <strong>Opening times 8.30 – 2.00pm Mondays to Fridays during term time.</strong></p>
-
-    <p>Our helpdesk can also help with general enquires:</p>
+    <p>Contact us for an employabilty health check</p>
 
     <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email</span>
     <span class="scs-helpdesk"><a href="mailto:careers@warwick.ac.uk">careers@warwick.ac.uk</a></span></br>
