--- a/templates/components/big-search-box.njk
+++ b/templates/components/big-search-box.njk
@@ -7,14 +7,13 @@
 
   <div class="form">
     <form action="//search.warwick.ac.uk/website">
-      <h2><label for="course-search">FIND A COURSE</label> </h2>
-
+      <h2><label for="course-search">Opportunities to increase your employability</br> during your time at Warwick</label> </h2>
+      <h3></h3>
 <input type="hidden" name="source" value="https://warwick.ac.uk/study/postgraduate"> <input type="hidden" name="urlPrefix" value="https://warwick.ac.uk/study/postgraduate/courses"> <input type="hidden" name="fileFormat" value="text/html">
-      <div class="input-group input-group-lg"><input id="course-search" type="search" name="q" class="form-control" placeholder="Enter a course name or keyword here"> <span class="input-group-btn"> <button class="btn btn-brand" type="submit">Search</button> </span> </div>
+      <div class="input-group input-group-lg"><input id="course-search" type="search" name="q" class="form-control" placeholder="Search for skill courses, jobs, work experience, bursaries, mentoring, volunteering, awards and much more ..."> <span class="input-group-btn"> <button class="btn btn-brand" type="submit">Search</button> </span> </div>
 
     </form>
 
-    <p> <a href="https://warwick.ac.uk/study/postgraduate/courses-2019/">Browse A-Z of 2019 Taught Courses</a>---<a href="https://warwick.ac.uk/study/postgraduate/research_degrees/">Browse 2019 Research Degrees</a> </p>
 
   </div>
 
