--- a/templates/partials/header.njk
+++ b/templates/partials/header.njk
@@ -84,7 +84,7 @@
 
             <div class="id7-header-text clearfix">
               <h1>
-                <span class="id7-current-site-link"><a href="/">Student Careers</a></span>
+                <span class="id7-current-site-link"><a href="/">Student Opportunities</a></span>
               </h1>
 
             </div>
