--- a/templates/topic.njk
+++ b/templates/topic.njk
@@ -11,7 +11,7 @@
           <div class="col-sm-7 ">
 
             <div class="topic-header">
-              <h3>Topic</h3>
+              {# <h3>All Warwick </h3> #}
               <h1 class="topic-title"> {% block topic_title %}{% endblock %}</h1>
             </div>
 
