--- a/pages/skills/topic_skills-courses.njk
+++ b/pages/skills/topic_skills-courses.njk
@@ -2,7 +2,7 @@
 {% extends 'topic.njk' %}
 
 {% block topic_title %}
-Exploring your future options
+Skills & Training
 {% endblock %}
 
 {% block main_content %}
@@ -10,44 +10,44 @@ Exploring your future options
 
   <ul>
     <li>
-        <a href="/options/personality-types.html" >
-    <h3>Aptitude and personality type tests</h3>
-    <p>Help identify your career interests, personality type and core values.</p>
-    </a>
+      <a href="#" >
+        <h3>Academic Writing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </a>
+    </li>
+
+    <li>
+      <a href="#" >
+        <h3>Enterprise skills development</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </a>
     </li>
 
 
       <li>
         <a href="#" >
-          <h3>Assessing your skills</h3>
+          <h3>Numerical Skills</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </a>
       </li>
 
       <li>
         <a href="#" >
-          <h3>Career planning statements</h3>
+          <h3>Learn a Language </h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </a>
       </li>
 
       <li>
         <a href="#" >
-          <h3>Determining your goals</h3>
+          <h3>Personal skills</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </a>
       </li>
 
       <li>
         <a href="#" >
-          <h3>Further study</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </a>
-      </li>
-
-      <li>
-        <a href="#" >
-          <h3>Graduate destinations </h3>
+          <h3>Study & Research Skills</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 </p>
         </a>
@@ -55,10 +55,12 @@ Exploring your future options
 
       <li>
         <a href="#" >
-          <h3>Timetable for action </h3>
+          <h3>Software training</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </a>
       </li>
+
+
   </ul>
 
 
@@ -73,7 +75,7 @@ Exploring your future options
 </ul>
 {% endblock %}
 
-{% block topic_promo %}
+{# {% block topic_promo %}
     <div class="scs-side-nav-promo box box boxstyle_ box1" />
         <h2>Help and advice</h2>
 
@@ -84,4 +86,4 @@ Exploring your future options
        <h3><i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email</span> <span class="scs-helpdesk"><a href="mailto:careers@warwick.ac.uk">careers@warwick.ac.uk</a></span></h3>
        <h3><i class="fa fa-phone fa-fw"></i><span class="sr-only">Phone</span> +44 (0)24 7652 3011</h3>
     </div>
-  {% endblock %}
+  {% endblock %} #}
