--- a/templates/homepage.njk
+++ b/templates/homepage.njk
@@ -1,10 +1,6 @@
 {% include 'partials/header.njk' %}
 
 
-<link href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css" rel="stylesheet" type="text/css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" type="text/javascript"> </script>
-
-
     <main class="id7-main-content-area" id="main">
       <header>
                     <div class="id7-horizontal-divider">
@@ -14,7 +10,7 @@
                     </div>
                     <div class="id7-page-title hidden">
                         <h1>
-                          Student Careers
+                          Student opportunities
                         </h1>
                     </div>
                 </header>
@@ -24,10 +20,9 @@
         <div class="layout layout-100 ">
           <div class="column-1">
             <div class="column-1-content">
+              {% include 'components/big-search-box.njk' %}
 
 							<div class="hp-layout slideshow-2017 slideshow-layout-2017 slideshow-light-theme">
-                {# {% include 'components/tile-carosel.njk' %} #}
-								{% include 'components/tile-carosel.njk' %}
 
 
                 {% block main_content %}
