--- a/templates/nav/top-menu.njk
+++ b/templates/nav/top-menu.njk
@@ -1,18 +1,23 @@
 <nav class="navbar navbar-primary hidden-xs" role="navigation">
   <ul class="nav navbar-nav">
     <li class="first protected" >
-      <a href="/advice/topic_advice-and-appointments.html">Advice and appointments</a>
+      <a href="/advice/topic_advice-and-appointments.html">Advice and Support</a>
     </li>
-    <li> <a href="/options/topic_future-options.html">Career options</a>
+    <li> <a href="/skills/topic_skills-courses.html">Skills courses</a>
     </li>
-    <li> <a href="/experience/topic_get-work-experience.html">Work experience</a>
+    <li> <a href="/experience/topic_get-work-experience.html">Jobs and work experience</a>
     </li>
-    <li> <a href="/job-searching/topic_job-searching.html">Job search strategies</a>
+    <li> <a href="/job-searching/topic_job-searching.html">Programmes and Awards</a>
     </li>
-    <li> <a href="/applications/topic_job-applications.html">Applying for jobs</a>
+    <li> <a href="/applications/topic_job-applications.html">Talks and Events</a>
     </li>
-    <li> <a href="/interviews/topic_interviews.html">Interviews</a>
+    <li> <a href="/interviews/topic_interviews.html">Bursaries and Funding</a>
     </li>
+
+    <li> <a href="/interviews/topic_interviews.html">Student Societies</a>
+    </li>
+
+
 
   </ul>
 </nav>
