changed topnav and templates names

--- a/pages/awards-programmes/topic_awards-programmes.njk
+++ b/pages/awards-programmes/topic_awards-programmes.njk
@@ -3,7 +3,7 @@
 {% import 'components/button.njk' as buttons %}
 
 {% block topic_title %}
-Job search strategies
+Programmes and awards
 {% endblock %}
 
 {% block main_content %}
