added more topics

--- a/pages/skills/topic_skills-courses.njk
+++ b/pages/skills/topic_skills-courses.njk
@@ -2,7 +2,7 @@
 {% extends 'topic.njk' %}
 
 {% block topic_title %}
-Skills & Training
+Skills training and workshops
 {% endblock %}
 
 {% block main_content %}
@@ -18,11 +18,25 @@ Skills & Training
 
     <li>
       <a href="#" >
-        <h3>Enterprise skills development</h3>
+        <h3>Presentation technologies workshops</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </a>
     </li>
 
+    <li>
+      <a href="#" >
+        <h3>EndNote Online workshopss</h3>
+        <p>Want to know more about managing your references, saving time and avoiding plagiarism?</p>
+      </a>
+    </li>
+
+
+      <li>
+        <a href="#" >
+          <h3>Clinical Skills Experience workshop</h3>
+          <p>Basic clinical skills sessions for non-medical students who are interested in applying to graduate-entry medicine.</p>
+        </a>
+      </li>
 
       <li>
         <a href="#" >
