--- a/pages/awards-programmes/topic_awards-programmes.njk
+++ b/pages/awards-programmes/topic_awards-programmes.njk
@@ -3,81 +3,97 @@
 {% import 'components/button.njk' as buttons %}
 
 {% block topic_title %}
-Programmes and awards
+Programmes and Awards
 {% endblock %}
 
 {% block main_content %}
 
 <ul>
+
+  <li>
+    <a href="#" >
+      <h3>Academic Writing programme</h3>
+      <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+    </a>
+  </li>
+
+
     <li>
       <a href="#" >
-        <h3>Building your online profile</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+        <h3>Innovation and Entrepreneurship Programme</h3>
+        <p>This online programme is designed to foster your ability to think like an entrepreneur and develop innovative products and services.</p>
       </a>
     </li>
 
     <li>
       <a href="/job-searching/career-sector-events/fair-sector-events.html" >
-        <h3>Careers fairs and sector events</h3>
-        <p>Careers fairs, sector events and employer sessions offer a chance for recruiters to have a presence on campus, and enable you to hear more about their organisations and benefit from hints and tips on the recruitment and selection process.</p>
+        <h3>Mentoring programme</h3>
+        <p>Are you a current student or recent graduate looking for a career mentor?</p>
       </a>
     </li>
 
-      <li>
-        <a href="#" >
-          <h3>Graduate recruitment cycle</h3>
-          <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </a>
-      </li>
+    <li>
+      <a href="#" >
+        <h3>Research Student Skills Programme (RSSP)</h3>
+        <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      </a>
+    </li>
+
+    <li>
+      <a href="#" >
+        <h3>Sprint programme</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      </a>
+    </li>
+
+
+
 
       <li>
         <a href="#" >
-          <h3>International jobs</h3>
-          <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </a>
-      </li>
-
-      <li>
-        <a href="#" >
-          <h3>Job sectors</h3>
-          <p>Are you interested in working in a particular industry? Find careers advice broken down by individual job sectors.</p>
-        </a>
-      </li>
-
-      <li>
-        <a href="#" >
-          <h3>Networking</h3>
-          <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </a>
-      </li>
-
-      <li>
-        <a href="#" >
-          <h3>Researching employers</h3>
-          <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-        </a>
-      </li>
-
-      <li>
-        <a href="#" >
-          <h3>Vacancies on myAdvantage</h3>
+          <h3>Study Abroad programme</h3>
           <p>Used by employers specifically looking to recruit Warwick students. All vacancies are screened by our advisers to ensure you get the best opportunities.</p>
         </a>
       </li>
 
+
       <li>
         <a href="#" >
-          <h3>What employers want</h3>
+          <h3>Undergraduate Research Support Scheme (URSS)</h3>
+          <p>Are you interested in working in a particular industry? Find careers advice broken down by individual job sectors.</p>
+        </a>
+      </li>
+
+
+
+            <li>
+              <a href="#" >
+                <h3>Warwick Skills Portfolio Award</h3>
+                <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+              </a>
+            </li>
+
+      <li>
+        <a href="#" >
+          <h3>Warwick in India</h3>
           <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </a>
       </li>
 
       <li>
         <a href="#" >
-          <h3>Small and medium sized enterprises (SME’s)</h3>
+          <h3>Warwick in Africa</h3>
           <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
         </a>
       </li>
+
+      <li>
+        <a href="#" >
+          <h3>Warwick Inspire</h3>
+          <p>Warwick Inspire is a unique student led volunteer programme which allows students the opportunity to plan and deliver lessons to secondary school pupils regarding Higher Education. </p>
+        </a>
+      </li>
+
   </ul>
 
 
@@ -87,19 +103,19 @@ Programmes and awards
 {% block related_links %}
 
 <ul>
-  <li><a href="/applications/topic_job-applications.html">Job applications & CVs</a></li>
-  <li><a href="/experience/topic_get-work-experience.html">Work experience</a></li>
+  <li><a href="#">Bursaries and Funding schemes</a></li>
+  <li><a href="#">Skills Courses</a></li>
 </ul>
 {% endblock %}
 
 {% block topic_promo %}
 <div class="scs-side-nav-promo boxstyle_ box1" />
-    <h2>myAdvantage job vacancies</h2>
+    <h2>URSS application now open</h2>
 
-<p>Used by employers specifically looking to recruit Warwick students, all vacancies on myAdvantage are screened by our advisers to ensure you find the best opportunities.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. .</p>
 
 {{ buttons.basic({
-  text: "Search",
+  text: "Apply",
   href: "https://myadvantage.warwick.ac.uk/students/appointments/",
   classes: "scs-button--booking"
 }) }}
