added topic section and more content

--- a/templates/components/big-search-box.njk
+++ b/templates/components/big-search-box.njk
@@ -7,10 +7,10 @@
 
   <div class="form">
     <form action="//search.warwick.ac.uk/website">
-      <h2><label for="course-search">Opportunities to increase your employability</br> during your time at Warwick</label> </h2>
+      <h2><label for="course-search">All Warwick opportunities in one place</label> </h2>
       <h3></h3>
 <input type="hidden" name="source" value="https://warwick.ac.uk/study/postgraduate"> <input type="hidden" name="urlPrefix" value="https://warwick.ac.uk/study/postgraduate/courses"> <input type="hidden" name="fileFormat" value="text/html">
-      <div class="input-group input-group-lg"><input id="course-search" type="search" name="q" class="form-control" placeholder="Search for skill courses, jobs, work experience, bursaries, mentoring, volunteering, awards and much more ..."> <span class="input-group-btn"> <button class="btn btn-brand" type="submit">Search</button> </span> </div>
+      <div class="input-group input-group-lg"><input id="course-search" type="search" name="q" class="form-control" placeholder="skills, jobs, experience, bursaries, awards, societies,  sports, volunteering, awards and much more ..."> <span class="input-group-btn"> <button class="btn btn-brand" type="submit">Search</button> </span> </div>
 
     </form>
 
