--- a/templates/nav/top-menu.njk
+++ b/templates/nav/top-menu.njk
@@ -1,9 +1,7 @@
 <nav class="navbar navbar-primary hidden-xs" role="navigation">
   <ul class="nav navbar-nav">
-    <li class="first protected" >
-      <a href="/advice/topic_advice-and-appointments.html">Advice and Support</a>
-    </li>
-    <li> <a href="/skills/topic_skills-courses.html">Skills courses</a>
+    <li>
+      <a href="/skills/topic_skills-courses.html">Skills courses</a>
     </li>
     <li> <a href="/experience/topic_jobs-experience.html">Jobs and work experience</a>
     </li>
@@ -14,7 +12,7 @@
     <li> <a href="/interviews/topic_interviews.html">Bursaries and Funding</a>
     </li>
 
-    <li> <a href="/interviews/topic_interviews.html">Student Societies</a>
+    <li> <a href="/interviews/topic_interviews.html">Societies, sports and networking</a>
     </li>
 
 
