--- a/templates/homepage.njk
+++ b/templates/homepage.njk
@@ -1,4 +1,8 @@
+
 {% include 'partials/header.njk' %}
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.13/vue.js"></script>
+
 
 
     <main class="id7-main-content-area" id="main">
