--- a/sass/core/_homepage.scss
+++ b/sass/core/_homepage.scss
@@ -11,11 +11,8 @@
     }
 
     .image-container {
-        position: absolute;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
         bottom: 0;
         right: 0;
         display: -webkit-box;
@@ -81,7 +78,8 @@
     }
 
     .course-finder .form {
-        position: relative;
+        position: absolute;
+        top: 150px;
         -webkit-box-flex: 0;
         -ms-flex: 0 1 auto;
         flex: 0 1 auto;
@@ -89,13 +87,6 @@
     }
 }
 
-.course-finder .form .twitter-typeahead {
-    width: 100%
-}
-
-.course-finder .form .twitter-typeahead+.input-group-btn {
-    vertical-align: top
-}
 
 .course-finder .form .tt-input {
     height: 46px;
